project(calc)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAG} -std=gnu++11")
include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB CPPS "*.cpp")
add_definitions(-Wall -O2)
add_executable(${PROJECT_NAME} ${CPPS})
target_link_libraries(${PROJECT_NAME} boost_system pthread pq boost_program_options)
install(TARGETS ${PROJECT_NAME} DESTINATION bin)
install(FILES config.txt DESTINATION bin)